mano-cli/src/snapshots/mano__report__tests__snapshot_runtime_error.snap
---
source: mano-cli/src/report.rs
expression: result
---
Error: Deu ruim na execução, brother!
   ╭─[ :1:7 ]
   │
 1 │ salve -"oi"
   │       ──┬──  
   │         ╰──── Só dá pra negar número, chapa!
───╯
